bad/bin_op_ne_bool_null.example_compiler_output
ERROR
[1mbad/bin_op_ne_bool_null.lat:3:7: [1;31merror: [0;1moperator != cannot compare values of types `boolean` and `null` because values are not convertible to either of the two types[m
	true != null;
	     [1;32m^[m
